아이콘변경

--- a/urbankitchen/css/style.css
+++ b/urbankitchen/css/style.css
@@ -6,7 +6,9 @@ Date :2020-03-31
 *************************************************/   
 
 @import "owl.carousel.min.css"; 
-@import "owl.theme.default.min.css";  
+@import "owl.theme.default.min.css";
+@import "all.css";  
+
 @font-face{
   font-family: 'Noto Sans KR';
   font-style: normal;
@@ -111,11 +113,11 @@ header{position:fixed; left:0; width:100%; height:6rem; z-index:2; background:#f
 header h1{display:inline-block; padding-left:6rem; font-size:2rem; height:6rem; line-height:6rem; letter-spacing: -0.59px}
 body.main header{text-align:center;} 
 body.main header h1{padding-left:5rem; text-align:center; background:url(../images/logo.png) no-repeat 0 50%; background-size:4.5rem auto;}
-header button{position:absolute; height:6rem; top:0; text-indent:-999px; overflow:hidden; outline:none;}
-header .btn-menu{width:6rem; left:0; background:url(../images/icon_menu.png) no-repeat 50% 50%; background-size:2.4rem auto;}
-header .btn-my{width:5rem; right:0; background:url(../images/icon_my.png) no-repeat 50% 50%; background-size:1.8rem auto;}
-header .btn-back{width:6rem; left:0;  text-indent:0; font-size:2.4rem;}
-header .btn-back em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
+header button{position:absolute; height:6rem; top:0; outline:none;}
+header button em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
+header .btn-menu{width:6rem; left:0; font-size:2.4rem;}
+header .btn-my{width:5rem; right:0; background:url(../images/icon_my.png) no-repeat 50% 50%; background-size:1.8rem auto; text-indent:-999px; overflow:hidden; }
+header .btn-back{width:6rem; left:0; font-size:2.4rem;}
 header nav.side-menu{position:fixed; left:-21.3rem; top:0; height:100%; padding-top:6rem; width:21.2rem; z-index: 2; text-align:left;}  
 header nav.side-menu:after{content:""; position: absolute; left:0; top:6rem; bottom:0; width:21.2rem; background:#fefcfc; z-index: 1;}  
 header nav.side-menu .depth1{position:relative; z-index:2; padding:0 1rem;}  
@@ -128,7 +130,8 @@ header nav.side-menu .depth1 > li:nth-of-type(4){background:url(../images/icon_m
 header nav.side-menu .depth1 > li:nth-of-type(5){background:url(../images/icon_menu05.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(6){background:url(../images/icon_menu06.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(7){background:url(../images/icon_menu07.png) no-repeat .5rem 50%;}
-header nav.side-menu .btn-close{position: absolute; left:7rem; top:2rem; width:2.4rem; height:2.4rem;  background:url(../images/close.png) no-repeat 50% 50%; background-size:1.5rem auto;}
+header nav .btn-close {position: absolute; left:7rem; top:1.2rem; width:2.4rem; height:2.4rem; font-size:2.4rem;} 
+header nav .btn-close em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
 footer{padding:1.8rem 1.8rem 2.5rem; background:#dddbdb; text-align:center;}  
 footer *{color:#000; font-size:1.4rem; letter-spacing:-0.1rem; line-height:120%;}
 footer .footer-menu{display:block; margin-bottom:2rem}
@@ -136,9 +139,9 @@ footer .footer-menu a{position:relative; display:inline-block; margin-right:.7re
 footer .footer-menu a:after{content:"|"; position:absolute; right:-.7rem; top:0}
 footer .footer-menu a:last-child:after{display:none;}
 footer .copy-area span{display:block}
-footer .copy-area span i{position:relative; display:inline-block; margin-right:.5rem}
-footer .copy-area span i:after{content:"|"; position:absolute; right:-.5rem; top:0}
-footer .copy-area span i:last-child:after{display:none}  
+footer .copy-area span em{position:relative; display:inline-block; margin-right:.5rem}
+footer .copy-area span em:after{content:"|"; position:absolute; right:-.5rem; top:0}
+footer .copy-area span em:last-child:after{display:none}  
 
 .container{padding-top:6rem; position:relative; z-index:1; min-height:60rem;}  
  
@@ -197,11 +200,8 @@ footer .copy-area span i:last-child:after{display:none}
 [class*="mainsec-sec05"] p{position: absolute; left:2rem; bottom:2rem; font-size:1.9rem; color:#fafafa; line-height:130%; font-weight:700; letter-spacing: -0.57px;}
 [class*="mainsec-sec05"] p em{display:block; font-size:1.5rem; color:rgba(255, 255, 255, 0.5); margin-top:.5rem; font-weight:500;}
 [class*="mainsec-sec05"] span{position: absolute; right:2rem; bottom:2rem; color:#fff;} 
-[class*="mainsec-sec05"] span i{display:inline-block;margin-left:1rem;}
-[class*="mainsec-sec05"] span i.icon01{padding-left:2rem; background:url(../images/icon01.png) no-repeat 0 50%; background-size:1rem auto;}
-[class*="mainsec-sec05"] span i.icon02{padding-left:2rem; background:url(../images/icon02.png) no-repeat 0 50%; background-size:1rem auto;}
-[class*="mainsec-sec05"] span i.icon03{padding-left:2rem; background:url(../images/icon03.png) no-repeat 0 50%; background-size:1rem auto;} 
-
+[class*="mainsec-sec05"] span em{display:inline-block;margin-left:1rem;} 
+[class*="mainsec-sec05"] span i{margin-right:.5rem;} 
 /*scheduler*/
 .calendar-wrap{margin-bottom:4.5rem; box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.08);}
 .calendar-wrap .calendar-head{position:relative; height:8rem; background:rgba(0, 0, 0, 0.02); text-align:center; color:#1e2022;}
@@ -255,6 +255,7 @@ footer .copy-area span i:last-child:after{display:none}
 .schedule-wrap textarea::-webkit-input-placeholder{color:#b9b9b9;}
 .schedule-wrap .time-area{display:block; overflow: hidden; margin-bottom:2rem;}
 .schedule-wrap .time-area button{width:45%; height:6rem; padding:1rem 2rem; text-align:left; border:1px solid #b9b9b9; font-size:1.5rem; border-radius:2.4rem;}
+.schedule-wrap .time-area button i{font-size:2.2rem; margin-top:0;}
 .schedule-wrap .time-area .start-time{float:left;}
 .schedule-wrap .time-area .end-time{float:right;}
 .schedule-wrap .time-area em{display:inline-block; text-align: center; width:10%; line-height:6rem;}
