--- a/urbankitchen/css/style.css
+++ b/urbankitchen/css/style.css
@@ -92,7 +92,7 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
 optgroup{font-weight:bold}
 
 label+input{margin-left:.4rem}
-button{margin:0; padding:0; cursor:pointer; border:0; background:0 0}
+button{margin:0; padding:0; cursor:pointer; border:0; background:0 0; outline:none;}
 input[type=checkout],input[type=radio]{margin-right:.4rem; padding:.5rem .5rem .3rem; border:1px solid #555555}
 input[type=search]{box-sizing:content-box}
 input[type=file],input[type=number],input[type=password],input[type=tel],input[type=text]{border-radius:0; -webkit-appearance:none; -webkit-border-radius:0; margin:0; padding:0; font-size:1.8rem}
@@ -104,7 +104,7 @@ header{position:fixed; left:0; width:100%; height:6rem; z-index:2; background:#f
 header h1{display:inline-block; padding-left:5.5rem; font-size:2rem; height:6rem; line-height:6rem; letter-spacing: -0.59px}
 body.main header{text-align:center;} 
 body.main header h1{padding-left:5rem; text-align:center; background:url(../images/logo.png) no-repeat 0 50%; background-size:4.5rem auto;}
-header button{position:absolute; height:6rem; top:0; outline:none;}
+header button{position:absolute; height:6rem; top:0;}
 header button em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
 header .btn-menu{width:6rem; left:0; font-size:2.4rem;}
 header .btn-my{width:5rem; right:0; background:url(../images/icon_my.png) no-repeat 50% 50%; background-size:1.8rem auto; text-indent:-999px; overflow:hidden; }
@@ -113,7 +113,6 @@ header nav.side-menu{position:fixed; left:-21.3rem; top:0; height:100%; padding-
 header nav.side-menu:after{content:""; position: absolute; left:0; top:6rem; bottom:0; width:21.2rem; background:#fefcfc; z-index: 1;}  
 header nav.side-menu .depth1{position:relative; z-index:2; padding:0 1rem;}  
 header nav.side-menu .depth1 > li > a{display:block; height:4.8rem; line-height:4.8rem; border-bottom:1px solid #dddbdb; color:rgba(0, 0, 0, 0.87); padding-left:6rem; font-weight:500;}
-header nav.side-menu .depth1 > li > a:hover{border-bottom:1px solid #fff} 
 header nav.side-menu .depth1 > li:nth-of-type(1){background:url(../images/icon_menu01.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(2){background:url(../images/icon_menu02.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(3){background:url(../images/icon_menu03.png) no-repeat .5rem 50%;}
