--- a/urbankitchen/css/style.css
+++ b/urbankitchen/css/style.css
@@ -98,20 +98,23 @@ input[type=search]{box-sizing:content-box}
 input[type=file],input[type=number],input[type=password],input[type=tel],input[type=text]{border-radius:0; -webkit-appearance:none; -webkit-border-radius:0; margin:0; padding:0; font-size:1.8rem}
 select{padding:.4rem; border:1px solid #555} 
 
-a:active {outline:1px #ccc solid;}
+a:active{outline:1px #ccc solid;}
 button:active{width:inherit; outline:auto; outline-color:#ccc;}
-input:focus,textarea:focus {outline:none;}
+input:focus,textarea:focus{outline:none;}
 
 /* --- 레이아웃 --- */
 #wrapper{height:100%} 
 header{position:fixed; left:0; width:100%; height:6rem; z-index:2; background:#fff;box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);}  
 header h1{display:inline-block; padding-left:5.5rem; font-size:2rem; height:6rem; line-height:6rem; letter-spacing: -0.59px}
-body.main header{text-align:center;} 
+body.main header,
+header h1.txt-c {text-align:center; display:block; padding-left:0;}
 body.main header h1{padding-left:5rem; text-align:center; background:url(../images/logo.png) no-repeat 0 50%; background-size:4.5rem auto;}
 header button{position:absolute; height:6rem; top:0;}
 header button em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
 header .btn-menu{width:6rem; left:0; font-size:2.4rem;}
 header .btn-my{width:5rem; right:0; background:url(../images/icon_my.png) no-repeat 50% 50%; background-size:1.8rem auto; text-indent:-999px; overflow:hidden; }
+header .btn-edit{width:7rem; right:1rem; font-size:1.8rem; font-weight:700; color: #87bb4a;}
+
 header .btn-back{width:5rem; left:0; font-size:2.4rem;}
 header nav.side-menu{position:fixed; left:-21.3rem; top:0; height:100%; padding-top:6rem; width:21.2rem; z-index: 2; text-align:left;}  
 header nav.side-menu:after{content:""; position: absolute; left:0; top:6rem; bottom:0; width:21.2rem; background:#fefcfc; z-index: 1;}  
@@ -124,7 +127,7 @@ header nav.side-menu .depth1 > li:nth-of-type(4){background:url(../images/icon_m
 header nav.side-menu .depth1 > li:nth-of-type(5){background:url(../images/icon_menu05.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(6){background:url(../images/icon_menu06.png) no-repeat .5rem 50%;}
 header nav.side-menu .depth1 > li:nth-of-type(7){background:url(../images/icon_menu07.png) no-repeat .5rem 50%;}
-header nav .btn-close {position: absolute; left:7rem; top:1.2rem; width:2.4rem; height:2.4rem; font-size:2.4rem;} 
+header nav .btn-close{position: absolute; left:7rem; top:1.2rem; width:2.4rem; height:2.4rem; font-size:2.4rem;} 
 header nav .btn-close em{display:inline-block; text-indent:-999px; overflow:hidden; font-size:0;}
 footer{padding:1.8rem 1.8rem 2.5rem; background:#dddbdb; text-align:center;}  
 footer *{color:#000; font-size:1.4rem; letter-spacing:-0.1rem; line-height:120%;}
@@ -177,14 +180,14 @@ footer .copy-area span em:last-child:after{display:none}
 
 [class*="mainsec-sec03"]{margin-bottom:3.6rem; color:#000; font-size:1.6rem;} 
 [class*="mainsec-sec03"] .slideWrap{margin-left:2rem;}
-[class*="mainsec-sec03"] .slideWrap a { outline:none;}
+[class*="mainsec-sec03"] .slideWrap a{outline:none;}
 [class*="mainsec-sec03"] .slideWrap mark{position:absolute; left:0; top:0; display:block; width:6.1rem; height: 2.8rem; text-align:center; font-size:1.4rem; line-height:2.6rem; letter-spacing:-0.42px; color: #4f4f4f; border-radius: 25px; border: solid 1px #4f4f4f; background-color: #f2f2f2;} 
 [class*="mainsec-sec03"] .slideWrap span{display:block; width:13.7rem; height:11.8rem; text-align:center;} 
 [class*="mainsec-sec03"] .slideWrap span img{width:100%;} 
 [class*="mainsec-sec03"] .slideWrap p{line-height:120%; margin-top:.7rem; letter-spacing: -0.16px; padding-right:2rem;}
 [class*="mainsec-sec03"] .slideWrap strong{display:block; font-weight:700; margin-top:.5rem;}
 [class*="mainsec-sec03"] .slideWrap s{font-size:1.4rem; color:#bdbdbd;}
-
+[class*="mainsec-sec03"] .slideWrap .item button{position:absolute; bottom:.5rem; right:2rem; text-align:right; color:#999; font-size:2rem; width:4rem; height:4rem;}
 [class*="mainsec-sec04"]{margin-bottom:3.6rem;} 
 [class*="mainsec-sec04"] .img-wrap{margin:0 2rem; border-radius:1rem; overflow:hidden;}
 [class*="mainsec-sec04"] .img-wrap img{width:100%; display:block;}
@@ -220,7 +223,7 @@ footer .copy-area span em:last-child:after{display:none}
  
 .tab-wrap{margin-bottom:7.7rem;}
 .tab-wrap .tab-menu{height:5.5rem; text-align:center; margin-bottom:4rem; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);}
-.tab-wrap .tab-menu:after {content:""; clear:both;}
+.tab-wrap .tab-menu:after{content:""; clear:both;}
 .tab-wrap .tab-menu li{float:left; width:50%;} 
 .tab-wrap .tab-menu li span{position:relative; display:block; height:5.5rem; line-height:5.5rem; text-align:center; font-size:1.7rem; border-bottom:1px solid #fff; color:#bebebe; font-weight:700;}
 .tab-wrap .tab-menu li.current span{color:#87bb4a; font-weight:700; }
@@ -263,6 +266,143 @@ footer .copy-area span em:last-child:after{display:none}
 .schedule-wrap .radio-area input[type="radio"]{width:2rem; height:2rem;}
  
 .brn-wrap button{width:100%; height:6.5rem; background:#eb5757; color:#fff; font-weight:700; font-size:1.8rem;}
+
+/*recipe*/
+[class*="recipe-top"] {height:45rem; background-color: #000; position: relative;}
+[class*="recipe-top"] .img img{height:45rem; overflow: hidden;}
+[class*="recipe-top"] button { position:absolute;  width:4rem; height:4rem;}
+[class*="recipe-top"] button em{ display:inline-block; text-indent:-999px; overflow:hidden; font-size:0; width:0;} 
+[class*="recipe-top"] button.btn-trash { top:1.5rem; left:2rem; color:#fff; font-size:3rem; }
+[class*="recipe-top"] button.btn-share { top:2rem; right:7rem; color:#828282; font-size:2.5rem;}
+[class*="recipe-top"] button.btn-bookmark { top:2rem; right:2rem;color:#fff; background-color:#87bb4a; border-radius:3.6rem; font-size:2rem; padding-left:.3rem;}
+[class*="recipe-top"] .txt-area {position:absolute; bottom:3rem; left:0; width:100%; padding:2rem 2rem 0; }
+[class*="recipe-top"] .txt-area *{ color:#fff;}
+[class*="recipe-top"] .txt-area .hashtag{display:block; margin-bottom:1.5rem;}
+[class*="recipe-top"] .txt-area .hashtag mark{display:inline-block; font-weight:30; min-width:4rem; padding:.2rem .8rem; font-size:1.3rem; border-radius:2.5rem; border: solid 1px #fafafa;}
+[class*="recipe-top"] .txt-area .txt-sb{display:block; font-size:3.6rem; font-weight:500; letter-spacing: -1.8px; line-height:130%; margin-bottom:2rem;}
+[class*="recipe-top"] .txt-area .txt-l{float:left; font-size:1.7rem;} 
+[class*="recipe-top"] .txt-area .txt-l img{height:2.3rem; vertical-align:middle;}
+[class*="recipe-top"] .txt-area .txt-r{float:right; font-size:1.7rem;}
+[class*="recipe-top"] .txt-area .txt-r span{display:inline-block; margin-left:1rem;}
+[class*="recipe-top"] .txt-area .txt-r span em{ color:#87bb4a}
+[class*="recipe-top"] .txt-area .txt-r span + span em{ color:#eb5757}
+[class*="recipe-cont"] {padding:2rem}
+[class*="recipe-cont"] h2 {font-size:1.6rem; padding-bottom:1.2rem; border-bottom:1px solid #333; margin-bottom:1.5rem;}
+[class*="recipe-cont"] h2 em{ font-size:1.0rem; color: #828282;}
+[class*="recipe-cont"] h2 strong{ color:#87bb4a; font-size:1.7rem; }
+[class*="recipe-cont01"] {padding:2rem 1rem; }
+[class*="recipe-cont01"] ul { display:flex; width:100%; margin-bottom:2rem;}
+[class*="recipe-cont01"] ul li{flex:1; margin:0 .5rem; height:8rem; border-radius:24px; border: solid 0.9px #bdbdbd; text-align:center;font-size:1.6rem; color: #4f4f4f; padding-top:4.5rem;}
+[class*="recipe-cont01"] ul li:nth-of-type(1) {background:url(../images/clock.png) no-repeat 50% 1.3rem;}
+[class*="recipe-cont01"] ul li:nth-of-type(2) {background:url(../images/easy.png) no-repeat 50% 1rem;}
+[class*="recipe-cont01"] ul li:nth-of-type(3) {background:url(../images/user.png) no-repeat 50% 1.3rem;}
+[class*="recipe-cont01"] ul li:nth-of-type(4) {background:url(../images/star.png) no-repeat 50% 1.3rem;}
+
+[class*="recipe-cont01"] p {padding:0 1rem; font-size:1.7rem; color:#828282; line-height:150%;}
+[class*="recipe-cont02"] p {font-size:1.7rem; color:#828282; line-height:150%; margin-bottom:1rem;} 
+[class*="recipe-cont02"] p em{color:#333;}
+[class*="recipe-cont02"] .btn-cart {display:block; width:100%; font-weight:700; height: 5.2rem; font-size:1.8rem; border-radius:2.5rem; background-color:#87bb4a; text-align:center; color:#fff;} 
+[class*="recipe-cont03"] .slide-area {position:relative; margin-bottom:1.5rem;}
+[class*="recipe-cont03"] .slide-area .img {display:block; margin:0 1.5rem;}
+[class*="recipe-cont03"] .slide-area .img img{width:100%; display:block;}
+[class*="recipe-cont03"] .slide-area .btn-next { position:absolute; right:0; top:50%; margin-top:-1.5rem; width:3rem; border-radius:2.4rem; height:3rem; border:solid 1.5px #4f4f4f; background-color:#fff;}
+[class*="recipe-cont03"] .slide-area .btn-next i {margin-left:.5rem;}
+[class*="recipe-cont03"] .slide-area .btn-next em {text-indent:-999px; font-size:0;}
+[class*="recipe-cont03"] .txt-step {font-size:1.7rem; color:#333; line-height:150%; margin-bottom:3rem;}
+[class*="recipe-cont03"] .txt-step em{display:block;}
+[class*="recipe-cont03"] .txt-tip {position: relative; padding-left:7rem; font-size:1.5rem; color:#828282; line-height:150%;}
+[class*="recipe-cont03"] .txt-tip em{display:block; position:absolute; left:0; top:0; text-align:center; width:6.2rem; height:2.6rem; border-radius:2.5rem; border: solid 1px #87bb4a;}
+[class*="recipe-cont04"] .review-top {height:3rem; margin-bottom:1.5rem;}
+[class*="recipe-cont04"] .review-top .img img{height:3rem; margin-bottom:1rem; vertical-align:middle;}
+[class*="recipe-cont04"] .review-top strong {display:inline-block; margin-left:.5rem;}
+[class*="recipe-cont04"] .review-top em {display:inline-block; margin-left:.5rem; color: #bdbdbd;}
+[class*="recipe-cont04"] .review-top .star {display:inline-block; margin-left:.5rem; color:#87bb4a;}
+[class*="recipe-cont04"] .review-cont {position:relative; padding-right:9rem; color:#828282; margin-bottom:4rem;}
+[class*="recipe-cont04"] .review-cont span {position:absolute; right:0; top:0; width:7.5rem;}
+[class*="recipe-cont04"] .review-cont span img {width:7.5rem;}
+[class*="recipe-cont04"] .btn-more {display:block; width:100%; font-weight:700; height: 5.2rem; font-size:1.8rem; border-radius:2.5rem; background-color:#f2f2f2; text-align:center; color:#87bb4a;} 
+
+/*mypage*/
+.myslide{position:relative; margin-bottom:4rem; } 
+.myslide .item .inner{height:19.1rem; padding:3rem 1.2rem 2rem 2rem; }
+.myslide .item .inner .imgwrap{display:block; position:absolute; right:1.2rem; top:2rem; height:17.1rem;}
+.myslide .item .inner .imgwrap img{width:100%; height:17.1rem;}
+.myslide .item .inner .imgwrap span{letter-spacing:-1px; display:block; width:4rem; height:4rem; position:absolute; top:.5rem; right:.5rem; padding-top:.5rem; text-align:center; color:#87bb4a; border: solid 1px #87bb4a;background: #fff; border-radius:2.4rem; font-size:1rem;}
+.myslide .item .inner .imgwrap span strong{display:block; line-height:100%;}
+.myslide .item .inner p{padding-right:17.2rem; } 
+.myslide .item .inner p strong{display:block; font-size:1.9rem; letter-spacing:-2px; line-height:140%;} 
+.myslide .item .inner p em{display:block;font-size:1.5rem; margin:.3rem 0 1rem;} 
+.myslide .item .inner p span{display:block;font-size:1.8rem; color:#eb5757}  
+.myslide .owl-theme .owl-dots{position:absolute; left:0; bottom:.5rem; width:100%; z-index:3; margin:0; text-align:left; padding-left:2rem;}
+.myslide .owl-theme .owl-dots span{margin:0 .5rem 0;}
+.myslide .owl-theme .owl-dots .owl-dot.active span,
+.myslide .owl-theme .owl-dots .owl-dot:hover span{background-color: #87bb4a;}
+.myslide .owl-theme .owl-dots .owl-dot span{width:.9rem; height:.9rem; background: #fff; border: solid 1px #87bb4a;}  
+
+.ranking{position:relative; margin-bottom:3rem; padding:.5rem 1.2rem 0 2rem; }
+.ranking .imgwrap{display:block; position:absolute; right:1.2rem; top:0; width:7rem; height:7rem;}
+.ranking .imgwrap img{width:100%; }
+.ranking .txtwrap{padding-right:10rem;}
+.ranking .txtwrap p{padding-left:3.5rem; font-size:1.5rem; line-height:130%;letter-spacing:-1px; margin-bottom:.5rem;}
+.ranking .txtwrap p .bookmarkwrap{position:absolute; left:2rem; top:.5rem;}
+.ranking .txtwrap p .bookmarkwrap i{font-size:3.2rem; color:#87bb4a;}
+.ranking .txtwrap p .bookmarkwrap mark{position:absolute; left:0; top:0; color:#fff; width:2rem; text-align:center;} 
+.ranking .txtwrap em{font-size:1rem; display: inline-block; margin:0 .5rem ;}
+.ranking .txtwrap em.up i{color:#399bcd}
+.ranking .txtwrap em.heart{color:#eb5757}
+
+.reserves{background-color: #87bb4a; overflow:hidden; margin-bottom:2.5rem;}
+.reserves p{height:12.5rem; padding:2.5rem 0 0; text-align:center; color:#fff; font-size:1.5rem; letter-spacing: -0.45px; }
+.reserves p strong{display:block; font-size:4rem; font-weight:700;}
+.reserves dl{position:relative; float:left; width:50%; height:4.8rem; line-height:4.8rem; color:#fff; background-color: rgba(51, 51, 51, 0.1); font-size:1.7rem; font-weight:300; padding:0 2rem;}
+.reserves dl dt{float:left;}
+.reserves dl dd{float:right;}
+.reserves dl:after{content:""; position:absolute; top:.6rem; right:0; width:1px; height: 3.7rem; background-color: #87bb4a; z-index:2;}
+
+.sales-history{margin-bottom:2.2rem; border-bottom:1px solid #ddd; padding:0 1.3rem 2rem;}
+.sales-history h2{text-align:center; height: 5.2rem; line-height:5.2rem; font-size:1.8rem; color:#87bb4a; margin-bottom:3rem; border-radius: 2.5rem; background-color: #f2f2f2;}
+.sales-history h3{text-align:center; height: 4.5rem; line-height:4.5rem; font-size:1.6rem; font-weight:300; color:#bebebe; margin-top:2.5rem;}
+.sales-history p{position:relative; margin-top:1.7rem}
+.sales-history p em{display:block; font-size:1.8rem; color:#333;}
+.sales-history p i{display:block; color:#bebebe;}
+.sales-history p strong{position:absolute; right:0; top:50%; margin-top:-1rem; font-size:2rem; color:#eb5757;}
+.sales-history .btn-area{display:flex; margin:0 .5rem;}
+.sales-history .btn-area button{flex:1; height:4.2rem; margin:0 .5rem; border-radius:.5rem; background-color: #f2f2f2; font-size:1.6rem; color: #828282;}
+.sales-history .btn-area button.active{border: solid 2px #87bb4a; color: #87bb4a; font-weight:700;}
+
+.grade-wrap{padding:0 1.3rem 4rem}
+.grade-wrap h2{font-size:1.8rem; color:#000; margin-bottom:2.7rem; font-weight:500;} 
+.grade-wrap .btn-wrap{position: relative;}
+.grade-wrap .btn-wrap .btn-area{display:flex; height:3.4rem; margin-right:15.9rem; border-radius:2.4rem; overflow: hidden;}
+.grade-wrap .btn-wrap .btn-area button{flex:auto; height:3.4rem; background-color: #e0e0e0; font-size:1.5rem; color: #bebebe;}
+.grade-wrap .btn-wrap .btn-area button.active{background-color: #87bb4a; color: #fff;} 
+.grade-wrap .btn-wrap .time{position:absolute; right:0; top:.3rem; height:3rem; line-height:3rem; text-align:center; width:14.9rem; border-radius:2.4rem; background-color: #828282;}
+.grade-wrap .btn-wrap .time i{color:#e0d97c;}
+.grade-wrap .btn-wrap .time em{color: #fff;} 
+.grade-wrap .grade-guide{ margin:3.5rem 0 6rem;}
+.grade-wrap .grade-guide span{display:block; padding:0 3rem 1rem;}
+.grade-wrap .grade-guide span i{display:inline-block; width:32%; text-align:center;}
+.grade-wrap .grade-guide ul { border-radius:3.6rem; height:5.7rem; position:relative;}
+.grade-wrap .grade-guide ul:before {content:""; display:block; clear:both; position:absolute; left:0; top:0; right:0; height:5.5rem; background:#f2f2f2; border: solid 1px #bdbdbd; z-index:1; border-radius:3.6rem;}
+.grade-wrap .grade-guide ul li{float:left; width:25%; height:5.7rem; position:relative; z-index: 2; border-right: solid 1px #bdbdbd;}
+.grade-wrap .grade-guide ul li:last-child { border:0;}
+.grade-wrap .grade-guide ul li em{display:block; height:5.7rem; width:100%; }
+.grade-wrap .grade-guide ul li:first-child em{border-radius:3.6rem 0 0 3.6rem;}
+.grade-wrap .grade-guide ul li:last-child em{border-radius:0 3.6rem 3.6rem 0;}
+.grade-wrap .grade-guide ul li i {display:block; left:0; width:100%; text-align:center; position:absolute; bottom:-3rem;}
+.grade-wrap .grade-list{margin-bottom:1.7rem;}
+.grade-wrap .grade-list li{overflow: hidden; padding:2rem 1rem; border-bottom:1px solid #ddd;}
+.grade-wrap .grade-list li:last-child{border-bottom:0}
+.grade-wrap .grade-list li em{display:block; float:left; height:4.6rem; line-height:4.6rem; font-size:1.8rem; color:#333; font-weight:500; padding-left:6rem;}
+.grade-wrap .grade-list li.grade-bronze em{background:url(../images/icon_bronze.png) no-repeat  0 50%; background-size:4.7rem auto;}
+.grade-wrap .grade-list li.grade-silver em{background:url(../images/icon_silver.png) no-repeat  0 50%; background-size:4.7rem auto;}
+.grade-wrap .grade-list li.grade-gold em{background:url(../images/icon_gold.png) no-repeat  0 50%; background-size:4.7rem auto;}
+.grade-wrap .grade-list li.grade-diamond em{background:url(../images/icon_diamond.png) no-repeat  0 50%; background-size:4.7rem auto;} 
+.grade-wrap .grade-list li p{float:right; text-align:right; font-size:1.8rem;}
+.grade-wrap .grade-list li p strong{display:block; color:#333; font-weight:500;}
+.grade-wrap .grade-list li p span{display:block; color: #828282;}
+
+.grade-wrap .guide-txt{letter-spacing: -0.54px; font-size:1.8rem; color:#828282;}
 
 @media only screen and (max-width:375px){
   [class*="mainsec-sec01"] dl dd button{margin-right:1.8rem;} 
